# EECS_203_Homework

./: .gitignore
Homework1/: CMakeLists.txt  cat_copy.raw.pp3  upImg.raw
Homework1/src/: main.c  main.cpp  subsample_and_interpolate.c
Homework2/Cpp_code/: CMakeLists.txt
Homework2/Cpp_code/include/: imageUtils.h
Homework2/Cpp_code/src/: OpenCVHistogramEqualization.cpp  grayLevelTransformation.cpp  histogramEqualization.cpp  main.cpp  plot.h
Homework2/Matlab_code/: GLT_gray_level_transformation.m  histogram_equalization.m
Homework2/Matlab_code/output_images/: glt_gamma_0.4  glt_gamma_2.5
Homework3/Cpp_code/: CMakeLists.txt
Homework3/Cpp_code/lib/: imageUtils.cpp
Homework3/Cpp_code/src/: homeworkQuestion3.cpp  linearAverageFilter.cpp  medianFilter.cpp  opencvConvAndFilters.cpp  opencvMedianFilter.cpp
Homework3/Matlab_code/: linear_averaging_filter.m  median_filter.m
Homework3/Matlab_code/utils/: getImgHist.m  linearFilter.m  medianFilter.m
Homework4/Cpp code/: CMakeLists.txt
Homework4/Cpp code/src/: DFT.cpp  DFT_OpenCV.cpp  laplacian_OpenCV_built_in.cpp  laplacian_filter.cpp  test.cpp
Homework4/Matlab code/: plot_magnitude_3d.m
Homework5/Cpp_code/: CMakeLists.txt
Homework5/Cpp_code/src/: filtering.cpp  test.cpp
Homework6/Cpp_code/: CMakeLists.txt
Homework6/Cpp_code/images_output/: gaussian_kernel_coefficients.txt
Homework6/Cpp_code/src/: Gaussian_filter_and_inverse_filter.cpp  gaussian_blur_and_inverse_filter.cpp  homework6.cpp  test.cpp
Homework6/Matlab_code/: gaussian_blur_deblur.m
Homework7/Cpp_code/: CMakeLists.txt
Homework7/Cpp_code/src/: question1.cpp  rgb_image.cpp
resources/Slides/: Chapter 6b Halftoning.pptx
sample_code/: CMakeLists.txt
sample_code/src/: function_high_level.cpp  homework5.cpp  homework6.cpp  laplacian.cpp  linearAvgFilter.cpp  main.cpp  memoryDemo.cpp  namespaceDemo.cpp  question1.cpp  referenceDemo.cpp  speed_test_OpenCV.cpp  structDemo.cpp
sample_code/src/Cpp/: CMakeLists.txt  assignmentReload.cpp  autoGenerate.cpp  class_of_class.cpp  const.cpp  encapsulation.cpp  friend.cpp  functor_demo.cpp  leftMoveOperatorReload.cpp  logicOperatorReload.cpp  nullptr.cpp  object_properties.cpp  object_properties2.cpp  operatorReload.cpp  plusplusReload.cpp  shallow_deep_copy.cpp  static_member.cpp  this_pointer.cpp
sample_code/src/inherent/: CMakeLists.txt  base_usage.cpp  inherent_type.cpp  object_model.cpp  same_name_demo.cpp  sequence_of_constructor_and_destructor.cpp
