add_executable(encapsulation encapsulation.cpp)
add_executable(object_properties object_properties.cpp)
add_executable(object_properties2 object_properties2.cpp)
add_executable(shallow_deep_copy shallow_deep_copy.cpp)
add_executable(class_of_class class_of_class.cpp)
add_executable(static_member static_member.cpp)
add_executable(this_pointer this_pointer.cpp)
add_executable(nullptr nullptr.cpp)
add_executable(const const.cpp)
add_executable(friend friend.cpp)
add_executable(autoGenerate autoGenerate.cpp)
add_executable(operatorReload operatorReload.cpp)
add_executable(leftMoveOperatorReload leftMoveOperatorReload.cpp)